# tado-exporter

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  docker-pr.yml  docker.yml  format.yml  test.yml
.run/: Test Client.run.xml  exporter.run.xml
exporter/: client.py
grafana/: dashboard.json
src/: client.py
