[project]
name = "tado-exporter"
version = "0.1.0"
description = "A basic crawler for the tado api"
authors = [{ name = "Dennis Bernardy", email = "bernardyd@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
packages = [{include = "exporter"}]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py312"]
line-length = "120"
