[project]
name = "tado-exporter"
description = "A simple exporter for Tado data"
version = "0.1.1"
authors = [
    { name = "Dennis", email = "dennis@ethernerd.net" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "prometheus-client",
    "libtado>=4",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
line-ending = "lf"
